<resources>
    <!--Login Activity String-->
    <string name="login_welcome">Welcome</string>
    <string name="caption_login">Find location Point of Interest in around you place easily</string>
    <string name="email_hint_login">Email Address</string>
    <string name="email_password_login">Password</string>
    <string name="ime_login">Login</string>
    <string name="button_text_login">Login</string>
    <string name="skip_login">Skip</string>
    <string name="register">Register</string>
    <string name="jktotw_logo_login">JktOtw Logo</string>
    <string name="title_activity_dummy_login">Sign in</string>
    <string name="name_register">Name</string>
    <string name="phone_hint_login">Phone Number</string>
    <string name="confirm_password_login">Confirm Password</string>
    <string name="password_error">This password is too short</string>
    <string name="email_error">Email Invalid</string>
    <string name="repassword_error">Both password field not same</string>
    <string name="phone_error">Format phone number is not valid</string>
    <string name="name_error">Name length cannot be less than 3 character</string>

    <string name="app_name">JktOtw</string>
    <string name="discover">Discover</string>
    <string name="navigation_item_home">HOME</string>
    <string name="navigation_item_login">LOGIN</string>
    <string name="navigation_item_search">SEARCH</string>
    <string name="navigation_item_map">MAPS</string>
    <string name="navigation_item_help">HELP</string>
    <string name="navigation_item_food"><![CDATA[FOOD & DRINKS]]></string>
    <string name="navigation_item_entertaiment">ENTERTAINMENT</string>
    <string name="navigation_item_atm"><![CDATA[ATM & BANKS]]></string>
    <string name="navigation_item_hotel">HOTEL</string>
    <string name="navigation_item_shooping">SHOPPING</string>
    <string name="navigation_item_hotspot">INDOSAT HOTSPOTS</string>
    <string name="category_entertaiment">Entertaiment</string>
    <string name="category_bank"><![CDATA[Atm & Banks]]></string>
    <string name="category_hotel">Hotel</string>
    <string name="category_shopping">Shooping</string>
    <string name="category_hospital">Hospital</string>
    <string name="category_indosat">Indosat Hotspot</string>
    <string name="navigation_item_hospital">HOSPITAL</string>
    <string name="browse_with_ar">Browse with AR</string>
    <string name="title_activity_list_places">ListPlacesActivity</string>
    <string name="category_food"><![CDATA[Food & Drinks]]></string>
    <string name="near_you">Near You</string>
    <string name="find_on_map">Find on Map</string>
    <string name="email_exists">Email already exists</string>
    <string name="Register_Success">Register Success</string>
    <string name="login_Success">Login Success</string>
    <string name="navigation_item_profile">PROFILE</string>
    <string name="navigation_item_logout">LOGOUT</string>
    <string name="title_activity_detail_place">DetailPlaceActivity</string>
    <string name="call">Call</string>
    <string name="directions">Directions</string>
    <string name="share">Share</string>
    <string name="photos">Photos</string>
    <string name="reviews">Reviews</string>
    <string name="related_place">Related Places</string>
    <string name="all">ALL</string>
    <string name="search_place_nearby">
        <![CDATA[
        Search nearby:<b> %s</b>
        ]]>
    </string>
    <string name="photos_number">Photos (%d)</string>
    <string name="related_place_number">Related Places (%s)</string>
    <string name="reviews_number">Reviews (%d)</string>
    <string name="no_rating">No one rating it yet</string>
    <string name="text_review">%d reviews</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_call">Do you want to call this number? \n\n%s</string>
    <string name="ok">Ok</string>
    <string name="no_number">This place has no number yet</string>
    <string name="share_place">Visit %s \nVia JktOtw</string>
    <string name="title_activity_map_place">MapPlaceActivity</string>
    <string name="action_settings">Settings</string>
    <string name="you">You</string>
    <string name="title_activity_direction">DirectionActivity</string>
    <string name="direction_actiobar">Direction %s</string>
    <string name="search_hint">Search Place</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="no_location">No location provided</string>
    <string name="address_not_found">Address not found</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="no_photo">There is no photo yet\nAdd it if you want by login</string>
    <string name="all_place">All Place</string>
    <string name="loading_more_item">Loading more place</string>
    <string name="Reload_place">Reload More Place</string>
    <string name="title_activity_related_place">RelatedPlaceActivity</string>
    <string name="related_place_title">%s Related Places</string>
    <string name="title_activity_augmented">Augmented Reality</string>
    <string name="review">\"%s\"</string>
    <string name="title_activity_review">Reviews</string>
    <string name="add_review">Write a review...</string>
    <string name="no_review">There is no review yet\nAdd it if you want</string>
    <string name="title_activity_add_review">Add Review</string>
    <string name="post">Post</string>
    <string name="title_activity_help">Help</string>
    <string name="question_review">What is reviews?</string>
    <string name="question_related_place">What is related places?</string>
    <string name="answer_review">You can find or add review for specific place</string>
    <string name="answer_related_place">With related place you can find other place that near place you see with the same type</string>
    <string name="more_detail">more details</string>
    <string name="distance_value">Distance</string>
    <string name="min_far">Distance</string>
    <string name="max_far">Max Far</string>
    <string name="Camera">Camera</string>
    <string name="gallery">Gallery</string>
</resources>
