<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/navigation_item_home"
            android:title="@string/navigation_item_home"
            android:icon="@drawable/ic_home_white_24dp"/>
        <item
            android:id="@+id/navigation_item_login"
            android:title="@string/navigation_item_login"
            android:checkable="false"
            android:icon="@drawable/ic_lock_outline_white_24dp"/>
        <item
            android:id="@+id/navigation_item_profile"
            android:title="@string/navigation_item_profile"
            android:icon="@drawable/ic_account_circle_white_24dp"/>
        <!--<item
            android:id="@+id/navigation_item_search"
            android:title="@string/navigation_item_search"
            android:icon="@drawable/ic_search_white_24dp"/>-->
        <item
            android:id="@+id/navigation_item_map"
            android:title="@string/navigation_item_map"
            android:icon="@drawable/ic_map_white_24dp"/>
        <item
            android:id="@+id/navigation_item_food"
            android:title="@string/navigation_item_food"
            android:icon="@drawable/ic_local_dining_white_24dp"/>
        <item
            android:id="@+id/navigation_item_entertaiment"
            android:title="@string/navigation_item_entertaiment"
            android:icon="@drawable/ic_mood_white_24dp"/>
        <item
            android:id="@+id/navigation_item_atm"
            android:title="@string/navigation_item_atm"
            android:icon="@drawable/ic_local_atm_white_24dp"/>
        <item
            android:id="@+id/navigation_item_hotel"
            android:title="@string/navigation_item_hotel"
            android:icon="@drawable/ic_hotel_white_24dp"/>
        <item
            android:id="@+id/navigation_item_shooping"
            android:title="@string/navigation_item_shooping"
            android:icon="@drawable/ic_local_offer_white_24dp"/>
        <item
            android:id="@+id/navigation_item_hospital"
            android:title="@string/navigation_item_hospital"
            android:icon="@drawable/ic_local_hospital_white_24dp"/>
        <item
            android:id="@+id/navigation_item_hotspot"
            android:title="@string/navigation_item_hotspot"
            android:icon="@drawable/ic_wifi_white_24dp"/>
        <item
            android:id="@+id/navigation_item_help"
            android:title="@string/navigation_item_help"
            android:icon="@drawable/ic_help_outline_white_24dp"/>
        <item
            android:id="@+id/navigation_item_logout"
            android:title="@string/navigation_item_logout"
            android:icon="@drawable/ic_lock_open_white_24dp"/>
    </group>
</menu>