<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bitmap_background_login"
    tools:context="favesolution.com.jktotw.Activities.LoginActivity"
    android:gravity="center_horizontal"
    style="@style/Base.TextAppearance.AppCompat.Headline">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="40dp"
        android:src="@drawable/bitmap_logo_jktotw"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caption_login"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="14sp"
        android:paddingRight="@dimen/login_horizontal_space"
        android:paddingLeft="@dimen/login_horizontal_space"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint_login"
        android:layout_marginLeft="@dimen/login_horizontal_space"
        android:layout_marginRight="@dimen/login_horizontal_space"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        style="@style/LoginEditText"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="textPassword"
        android:hint="@string/email_password_login"
        android:layout_marginLeft="@dimen/login_horizontal_space"
        android:layout_marginRight="@dimen/login_horizontal_space"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:imeActionLabel="@string/ime_login"
        style="@style/LoginEditText"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/login_horizontal_space"
        android:layout_marginRight="@dimen/login_horizontal_space"
        android:text="@string/button_text_login"
        android:textColor="@color/colorWhite"
        android:background="@drawable/shape_button_login"/>
</LinearLayout>
