<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/container_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/swipe_container"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.gms.maps.MapView
                android:id="@+id/map_place"
                android:layout_width="match_parent"
                android:layout_height="@dimen/map_static_width"
                android:layout_alignParentTop="true"
                map:cameraZoom="13"
                map:mapType="normal"
                map:liteMode="true"
                tools:ignore="MissingPrefix"/>
            <!--<FrameLayout
                android:id="@+id/map_place"
                android:layout_width="match_parent"
                android:layout_height="@dimen/map_static_width"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimary"/>-->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_place"
                android:layout_width="@dimen/image_photo_circle_width"
                android:layout_height="@dimen/image_photo_circle_height"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="-32dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/map_place"
                android:src="@drawable/bitmap_placeholder"/>
            <LinearLayout
                android:id="@+id/content_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_toRightOf="@id/image_place"
                android:layout_toEndOf="@id/image_place"
                android:layout_below="@+id/map_place"
                android:paddingRight="8dp">
                <TextView
                    android:id="@+id/text_name_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TitleInfo"/>
                <TextView
                    android:id="@+id/text_address_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    style="@style/AddressInfo"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/text_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/RatingNumber"
                        android:layout_marginRight="6dp"/>
                    <RatingBar
                        android:id="@+id/rating_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="1dp"
                        android:numStars="5"
                        android:rating="4.5"
                        android:progressDrawable="@drawable/ratingbar_selector"
                        style="?android:ratingBarStyleSmall"/>
                    <TextView
                        android:id="@+id/text_review"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/colorTransparent40"
                        android:text="@string/text_review"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/content_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_below="@id/content_info"
                android:layout_marginTop="@dimen/activity_vertical_margin">
                <Button
                    android:id="@+id/button_direction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_directioon_splid_24dp"
                    android:text="@string/directions"
                    style="@style/BlackText.ButtonDetail"/>
                <Button
                    android:id="@+id/button_call"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:drawableLeft="@drawable/ic_call_24dp"
                    android:text="@string/call"
                    style="@style/BlackText.ButtonDetail"/>
                <Button
                android:id="@+id/button_share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_share_24dp"
                android:text="@string/share"
                style="@style/BlackText.ButtonDetail"/>
        </LinearLayout>
        <TextView
            android:id="@+id/text_search_nearby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/content_button"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"/>
            <LinearLayout
                android:id="@+id/button_detail_container"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_search_nearby"
                android:layout_marginTop="@dimen/activity_vertical_margin">
                <RelativeLayout
                    android:id="@+id/content_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:clickable="true"
                    android:background="@drawable/shape_border_top">
                    <ImageView
                        android:id="@+id/image_photo_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/ic_camera_alt_grey_700_24dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/image_photo_info"
                        android:layout_toEndOf="@id/image_photo_info"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/photos"
                        style="@style/BlackText.CategoryListText"/>
                    <ImageView
                        android:id="@+id/arrow_photo_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_chevron_right_grey_24dp"
                        android:contentDescription="@string/app_name"/>
                    <TextView
                        android:id="@+id/text_count_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="#212121"
                        android:layout_alignRight="@id/arrow_photo_right"
                        android:layout_marginRight="32dp"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/content_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:background="@drawable/shape_border_top"
                    android:clickable="true">
                    <ImageView
                        android:id="@+id/image_review_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/ic_star_grey_700_24dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/image_review_info"
                        android:layout_toEndOf="@id/image_review_info"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/reviews"
                        style="@style/BlackText.CategoryListText"/>
                    <ImageView
                        android:id="@+id/arrow_review_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_chevron_right_grey_24dp"
                        android:contentDescription="@string/app_name"/>
                    <TextView
                        android:id="@+id/text_count_review"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="#212121"
                        android:layout_alignRight="@id/arrow_review_right"
                        android:layout_marginRight="32dp"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/content_related"
                    android:padding="16dp"
                    android:clickable="true"
                    android:background="@drawable/shape_border_top">
                    <ImageView
                        android:id="@+id/image_place_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/ic_place_grey_700_24dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/image_place_info"
                        android:layout_toEndOf="@id/image_place_info"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/related_place"
                        style="@style/BlackText.CategoryListText"/>
                    <ImageView
                        android:id="@+id/arrow_place_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_chevron_right_grey_24dp"
                        android:contentDescription="@string/app_name"/>
                    <TextView
                        android:id="@+id/text_count_place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="#212121"
                        android:layout_alignRight="@id/arrow_place_right"
                        android:layout_marginRight="32dp"/>
                </RelativeLayout>
            </LinearLayout>
            <FrameLayout
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/colorDivider"
                android:layout_below="@id/button_detail_container"/>
            <TextView
                android:id="@+id/text_photo"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_below="@id/divider1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photos_number"
                style="@style/BlackText.CategoryListText"/>
            <TextView
                android:id="@+id/see_all_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/divider1"
                android:drawableRight="@drawable/ic_chevron_right_grey_24dp"
                android:drawablePadding="8dp"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_photo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_photo_circle_height"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_below="@id/text_photo"/>
            <FrameLayout
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorDivider"
                android:layout_below="@id/recyclerview_photo"/>
            <TextView
                android:id="@+id/text_review_number"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_below="@id/divider2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews_number"
                style="@style/BlackText.CategoryListText"/>
            <TextView
                android:id="@+id/see_all_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:layout_alignParentRight="true"
                android:layout_below="@id/divider2"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:drawableRight="@drawable/ic_chevron_right_grey_24dp"
                android:drawablePadding="8dp"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_review"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/text_review_number"/>
            <FrameLayout
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorDivider"
                android:layout_below="@id/recyclerview_review"/>
            <TextView
                android:id="@+id/text_related_place_number"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_below="@id/divider3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/related_place_number"
                style="@style/BlackText.CategoryListText"/>
            <TextView
                android:id="@+id/see_all_related_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:layout_alignParentRight="true"
                android:layout_below="@id/divider3"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:drawableRight="@drawable/ic_chevron_right_grey_24dp"
                android:drawablePadding="8dp"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_related_place"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_photo_circle_height"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/text_related_place_number"/>
        </RelativeLayout>
    </ScrollView>
    <ProgressBar
        android:layout_gravity="center"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"/>
</FrameLayout>